--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+version 0.3.4 (2018-03-26)
+- log2FoldChange is now reflective of Condition A rather than Condition B in 
+differential expression results
+
 version 0.3.3 (2018-03-02)
 - PlotStability now works properly for all resolutions
 - Example datasets have been moved to another repository
