--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+version 0.3.5 (2018-04-05)
+- Resolved R CMD check documentation warnings
+- Changed Rmarkdown engine to multiformat
+
 version 0.3.4 (2018-03-26)
 - log2FoldChange is now reflective of Condition A rather than Condition B in 
 differential expression results
