--- a/vignettes/ascend_Tutorial.Rmd
+++ b/vignettes/ascend_Tutorial.Rmd
@@ -5,12 +5,12 @@ author: "Anne Senabouth"
 date: "`r Sys.Date()`"
 output:
   html_document:
-    keep_md: yes
+    keep_md: true
   pdf_document: default
 vignette: |
   %\VignetteIndexEntry{An introduction to ascend - Analysis of Single Cell Expression, Normalisation and Differential expression} 
   %\VignetteEncoding{UTF-8}
-  %\VignetteEngine{knitr::rmarkdown} 
+  %\VignetteEngine{knitr::multiformat}
 ---
 
 ## Before you begin
