--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,27 @@
-version 0.5 (2018-04-30)
+version 0.6.7 (2018-07-17)
+- Resolved repeat clustering issue with runCORE
+
+version 0.6.6 (2018-07-17)
+- Resolved bug with filterByOutliers
+- Reassessed package dependencies
+
+version 0.6.5 (2018-07-13)
+- Updated documentation to reflect new functions.
+- Resolved runTSNE issue.
+
+version 0.6.0 (2018-07-11)
+- Fixing installation issues.
+
+version 0.6.0 (2018-07-11)
+- Converted EMSet to SingleCellExperiment-inherited object.
+- Restructured all functions to interact with new EMSet
+- Added LRT function.
+- Added DESeq2 wrapper.
+
+version 0.5.2 (2018-05-16)
+- Set stringAsFactors import in LoadCellRanger function to FALSE
+
+version 0.5.0 (2018-04-30)
 - Upgraded for compatibility with Bioconductor 3.7
 - Removed functions related to the use of SCESets
 
