--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+version 0.6.8 (2018-07-19)
+- Changed gene_id call to general call for functions.
+
 version 0.6.7 (2018-07-17)
 - Resolved repeat clustering issue with runCORE
 
