--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,8 @@
+version 0.7.2 (2018-08-07)
+- Changed runCORE to runSCORE
+- Added updateObject for converting old EMSets for compatability with the new
+version of ascend.
+
 version 0.7.0 (2018-08-02)
 - Updated documentation of some functions.
 - Updated base vignette.
