--- a/vignettes/ascend-tutorial.Rmd
+++ b/vignettes/ascend-tutorial.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{An introduction to 'ascend' (Analysis of Single Cell Expression, Normalisation and Differential expression)}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{knitr::knitr}
   %\VignetteEncoding{UTF-8}
 ---
 
