--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+version 0.7.5 (2018-08-14)
+- Optimisation for large datasets via sparse matrices
+
 version 0.7.4 (2018-08-09)
 - Updated documentation.
 - Resolved issues with updateObject function.
