--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+version 0.7.6 (2018-08-17)
+- Reverted SCORE algorithm name to CORE
+- Major optimisations for large datasets
+
 version 0.7.5 (2018-08-14)
 - Optimisation for large datasets via sparse matrices
 
