--- a/vignettes/ascend-tutorial.Rmd
+++ b/vignettes/ascend-tutorial.Rmd
@@ -60,7 +60,12 @@ names unique by using R's 'make.unique' function.
 controls. This is why gene names are preferred.
 
 It is beneficial to prepare cell and gene information to accompany the 
-expression matrix. 
+expression matrix.
+
+If you are working with over 10,000 cells on a personal computer - it is highly
+recommended you load your expression matrix as a [sparse matrix](https://cran.r-project.org/web/packages/Matrix/index.html). This 
+decreases the amount of memory used by the object and enables `ascend` to take
+advantage of the matrix functions from the `Matrix` package.
 
 Cell information should be loaded into a data frame containing cell identifiers
 in the first column (cell_barcode), the name of the batch the cell was sequenced 
@@ -234,6 +239,23 @@ The subgroups within the EMSet can also be subsetted from the EMSet with the
 # Subset batch 1 from the combined EMSet
 Batch1_EMSet <- subsetCondition(EMSet, by = "batch", conditions = list(batch = c(1)))
 ```
+
+### 3.4 Updating EMSets created with older versions of 'ascend'
+If you have an EMSet created with older versions of `ascend` < 0.6.0, you may 
+import your old objects into the new environment as follows:
+
+```{r update_object, eval = FALSE}
+# Read in old EMSet stored as an RDS file
+legacy_EMSet <- readRDS("LegacyEMSet.rds")
+
+# Update to new object
+# Please ensure your new object has the same name as the old object
+legacy_EMSet <- updateObject(legacy_EMSet)
+
+```
+
+Please note that if your data has been normalised, it will be stored in the 
+`counts` and `normcounts` slots. 
 
 ## 4. Visualising with 'ascend'
 Most plots in `ascend` are generated via the ggplot2 package. These plots can be
