--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+version 0.8.2 (2018-09-21)
+- Fixed issue with installation related to faulty documentation
+
 version 0.8.1 (2018-09-19)
 - Bux fix for runCORE reclustering when outliers are found
 
