--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+version 0.8.3 (2018-09-25)
+- Fixed reclustering issue when CORE detects outliers in dataset
+
 version 0.8.2 (2018-09-21)
 - Fixed issue with installation related to faulty documentation
 
