--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,21 @@
+version 0.9.4 (2018-11-20)
+- Fixed issues with scran wrapper
+
+version 0.9.2 (2018-11-07)
+- Added parallel function to DESeq
+- Fixed bug with DESeq
+ 
+version 0.9.1 (2018-10-30)
+- Resolved reoccuring error with runDESeq wrapper failing on some datasets.
+- Resolved plotting issues associated with small datasets.
+
+version 0.9.0 (2018-10-16)
+- Updated CORE algorithm to now select high resolution plateau if it is more
+stable than all clustering results generated within transition region.
+- Fixed bug with scranNormalise and datasets generated from just expression
+data.
+- Updated normaliseBatches function to accept non-numeric batch labels
+
 version 0.8.3 (2018-09-25)
 - Fixed reclustering issue when CORE detects outliers in dataset
 
