--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,8 @@
+version 0.9.9 (2019-03-01)
+- Changed how objects are loaded EMSets via new EMSets
+- Altered EMSet validation function to accomodate how slots are checked
+- Changed SingleCellExperiment to EMSet conversion functions
+
 version 0.9.8 (2019-01-22)
 - Addressed R CMD check error messages
 
