--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+version 0.9.3 (2019-06-13)
+- Addressed BiocCheck errors
+- Introduced Rcpp and RcppArmadillo functionalities
+- Moved to powellgenomicslab repository
+
 version 0.9.9 (2019-03-01)
 - Changed how objects are loaded EMSets via new EMSets
 - Altered EMSet validation function to accomodate how slots are checked
